(Fixed) Corrected overlapping of prices and product on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -313,11 +313,16 @@ body {
     margin-top: -20px;
 }
 
-/**************************************************** Tablet ****************************************************/
+@media only screen and (max-width: 1334px) {
 
-@media only screen and (max-width: 768px) {
+    .cof {
+        min-width: 250px;
+    }
+
+    .disp {
+        width: 70%;
+    }
 }
-
 
 /**************************************************** length of nav ****************************************************/
 
@@ -358,6 +363,7 @@ body {
             width: 32px;
             height: 32px;
         }
+
 
        
 }
@@ -422,7 +428,7 @@ body {
     /********************************** About**********************************/
 
 .abt {
-    height: 200px;
+    min-height: 200px;
     background-color: #FFAF5F;
     width: 100%;
     margin-bottom: 20px;
@@ -444,7 +450,10 @@ body {
     line-height: 1em;
     margin-top: -40px;
     margin-left: -8px;
-    
+}
+
+.right p {
+    width: 100%;
 }
 
 
